--- a/index.html
+++ b/index.html
@@ -41,36 +41,40 @@
                 </section>
 
                 <div class="main-grid">
-                    <section class="work-experience">
-                        <h2>Work Experience</h2>
-                        <div class="company">
-                            <h3>roadmap.sh</h3>
-                            <p>Solved all the frontend projects</p>
-                            <a href="#" class="profile-link">Visit my Profile</a>
-                        </div>
-                        <div class="opensource">
-                            <h3>OpenSource Work</h3>
-                            <p>Contributed to 50 opensource projects. Made my own projects with 200 GitHub Stars.</p>
-                            <a href="#" class="github-link">Visit my GitHub Profile</a>
-                        </div>
-                    </section>
+                    <div class="left-column">
+                        <section class="work-experience">
+                            <h2>Work Experience</h2>
+                            <div class="company">
+                                <h3>roadmap.sh</h3>
+                                <p>Solved all the frontend projects</p>
+                                <a href="#" class="profile-link">Visit my Profile</a>
+                            </div>
+                            <div class="opensource">
+                                <h3>OpenSource Work</h3>
+                                <p>Contributed to 50 opensource projects. Made my own projects with 200 GitHub Stars.</p>
+                                <a href="#" class="github-link">Visit my GitHub Profile</a>
+                            </div>
+                        </section>
+                    </div>
 
-                    <section class="education">
-                        <h2>Education</h2>
-                        <p>Graduated with 3.76 out of 4 CGPA. Won Acme Hackathon. Organized 30 sessions.</p>
-                        <h3>Courses I took:</h3>
-                        <ul>
-                            <li>Object Oriented Programming</li>
-                            <li>Data Structures and Algorithms</li>
-                            <li>Web Engineering</li>
-                            <li>Artificial Intelligence</li>
-                            <li>Human Computer Interaction</li>
-                            <li>Computer Graphics</li>
-                            <li>Database Management Systems</li>
-                            <li>Distributed Database Systems</li>
-                            <li>Discreet Mathematics</li>
-                        </ul>
-                    </section>
+                    <div class="right-column">
+                        <section class="education">
+                            <h2>Education</h2>
+                            <p>Graduated with 3.76 out of 4 CGPA. Won Acme Hackathon. Organized 30 sessions.</p>
+                            <h3>Courses I took:</h3>
+                            <ul>
+                                <li>Object Oriented Programming</li>
+                                <li>Data Structures and Algorithms</li>
+                                <li>Web Engineering</li>
+                                <li>Artificial Intelligence</li>
+                                <li>Human Computer Interaction</li>
+                                <li>Computer Graphics</li>
+                                <li>Database Management Systems</li>
+                                <li>Distributed Database Systems</li>
+                                <li>Discreet Mathematics</li>
+                            </ul>
+                        </section>
+                    </div>
                 </div>
 
                 <section class="reviews">
